--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,20 @@ pytz==2022.7
 PyYAML==6.0
 sqlparse==0.4.3
 uritemplate==4.1.1
+asgiref==3.6.0
+attrs==22.2.0
+Django==4.1.5
+django-admin-interface==0.24.2
+django-colorfield==0.8.0
+django-extensions==3.2.1
+django-rest-framework==0.1.0
+djangorestframework==3.14.0
+drf-spectacular==0.25.1
+inflection==0.5.1
+jsonschema==4.17.3
+Pillow==9.4.0
+pyrsistent==0.19.3
+pytz==2022.7
+PyYAML==6.0
+sqlparse==0.4.3
+uritemplate==4.1.1
